--- a/index.html
+++ b/index.html
@@ -8,19 +8,8 @@
 <p>Dynamic Full-Stack Software Engineer specializing in Data Science with a passion for innovation and problem-solving.</p>
 <h2 id="education">Education</h2>
 <ul>
-<li><p><strong>University at Buffalo</strong></p>
-<ul>
-<li><em>MS Data Science</em> - 2024-2025</li>
-</ul>
-</li>
-<li><p><strong>Vellore Institute of Technology</strong></p>
-<ul>
-<li><em>Btech Electronics and Communications Engineering</em> - 2019-2023</li>
-<li><em>GPA:</em> 9.03</li>
-<li>Championed the National Entrepreneur Challenge 2020 (IIT Madras)</li>
-<li>Contributed as a digital artist in the Fine Arts Club.</li>
-</ul>
-</li>
+<li><p><strong>University at Buffalo</strong> <em>MS Data Science</em> - 2024-2025 </p></li>
+<li><p><strong>Vellore Institute of Technology</strong>| <em>GPA:</em> 9.03 | <em>Btech Electronics and Communications Engineering</em> - 2019-2023 |</p></li>
 </ul>
 <h2 id="publications">Publications</h2>
 <ul>
